feat: adding swagger for delete user endpoint
